crates/hir-ty/tests/snapshots/jls_constructor_delegation__ref_super_before_super.snap
---
source: crates/hir-ty/tests/jls_constructor_delegation.rs
expression: out
---
FILE /src/com/example/Ctors.java:
package com.example;

class Base {
    int b;
}

class Sub extends Base {
    Sub() {
        super.b = 2;
        super();
    }
}

method Sub(): <init>
  @9:8..9:15 'super()': constructor-call-not-first: Constructor call must be the first statement in a constructor
  @8:14..8:15 'b': cannot-reference-before-super: Cannot reference 'b' before supertype constructor has been called
