crates/hir-ty/tests/snapshots/jls_constructor_delegation__self_recursive_ctor_body.snap
---
source: crates/hir-ty/tests/jls_constructor_delegation.rs
expression: out
---
FILE /src/com/example/Ctors.java:
package com.example;

class Self {
    Self() {
        this();
    }
}
